--- a/appsscript.json
+++ b/appsscript.json
@@ -1,14 +1,18 @@
 {
   "timeZone": "America/New_York",
   "dependencies": {
-    "enabledAdvancedServices": [
-      {
-        "userSymbol": "YouTube",
-        "version": "v3",
-        "serviceId": "youtube"
-      }
-    ]
+    "enabledAdvancedServices": [{
+      "userSymbol": "YouTube",
+      "serviceId": "youtube",
+      "version": "v3"
+    }]
   },
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "runtimeVersion": "V8",
+  "sheets": {
+    "macros": [{
+      "menuName": "AA",
+      "functionName": "AA"
+    }]
+  }
 }
